# ClangAsmTest1

./: .gitignore  8086_cpu.cpp  8086_cpu.h  CMakeLists.txt  CMakeSettings.json  CMakeSettings_temp.txt  ClangAsmTest1.cpp  MSVC_jank.txt  RNG_helpers.h  _CMakeLists_backup.txt  _CMakeSettings_backup.json  _FAIL_CMakeLists_test.txt  _ZECL_NOTES.txt  __th06_struct_defs.cpp  _dbghelp.lib  a.out  as_help.txt  asm_test.asm  bee_movie_inline_asm.h  bee_movie_script.h  bson_test.cpp  build_tiny_pe.bat  clang_args_hidden_new.txt  clang_args_new.txt  clang_cl_args_new.txt  cnc_rng.h  copypasta_printer.cpp  cpp_evil_hack_test_1.cpp  cpp_rtti_full.cpp  create_process_test.cpp  custom_printf.cpp  custom_vm.cpp  custom_vm_opcodes.txt  dbghelp_real.lib  decent_rng.h  dns_test.cpp  dsound_hijack.def  dummy_data.asm  dummy_def.def  dummy_dllmain.cpp  (+96 more)
AoCF/: allocation_func_test.cpp  aocf_test.cpp  kite_squirrel_api.h  lobby_code.cpp  plugin_patch.cpp
AoCF/netcode_files/: AllocMan.cpp  AllocMan.h  Autopunch.cpp  Autopunch.h  PatchUtils.cpp  PatchUtils.h  fake_lag.h  log.cpp  log.h  main.cpp  main_old.cpp  main_old2.cpp  util.h  znet.h  zpunch.cpp  zpunch_old.cpp  zthread_old.h
AoCF/netplay_patch/: netplay.cpp
DSOUND_hijack/: dsound.cpp
DummyDLL/: dummy_dll.cpp
EoSD/: NewEoSDECL.cpp  eosd_ecl_extensions.cpp
FW/: crash_fix_proof.js  fw_test.cpp  interp1D.cpp  interp1D_fast.cpp  new_rng.cpp  new_terrible_lists.h  new_terrible_lists2.h  new_terrible_lists_release.h  new_terrible_lists_trial.h  render_turbo.asm  render_turbo.txt  render_turbo_avx2.asm  render_turbo_avx2.txt  render_turbo_avx2_old.asm  render_turbo_old.asm  tick_and_draw_funcs.txt
FoaK/: asm_defs.asm  patch_funcs.cpp
IN/: test.cpp
MoF/: NewMoFECL.cpp
PCB/: pcb_enemy_dump.cpp
UDoaLG/: aun2_binhack.js  cooldown_end_binhacks.js  ecl_filenames.js  item_funcs.js  layer_data.txt  new_rng.cpp  render_turbo_udoalg - Copy.asm  render_turbo_udoalg.asm  story_update_funcs.cpp  th19.v1.00a.js  udoalg_test.cpp  v100a_p1ai_patch.js  v110c_p1ai_patch.js  yuuma_bullet_cancel.js  yuuma_c1_enemy.js
UDoaLG/p1ai_mod/: th19.js  th19.v1.00a.js  th19.v1.10c.js
UM/: NewUMECL.cpp  UMTest1.rc  UM_bullet_ex.cpp  bullet_ex_args.txt  card_table.h  common.hecl  compile.bat  d3d9_offsets.txt  ecl_info.txt  globals.asm  message.txt  new_header_test.cpp  raise_scorecap.js  replay_customization.js  st00.ecl_dump_map  st00.ecl_raw_redump_map  st00.ecl_redump_map  th19_move_ecl.cpp  xinput_sucks.h
UM/test_scripts/: common.hecl  compile.bat  compile_thcrap.bat  enemy_test.anm_dump_map  enemy_test.anm_redump_map  math.hecl  patchy.anm_dump_map  patchy.anm_redump_map  remove_test.bat  st00.ecl_dump_map  st00.ecl_raw_redump_map  st00.ecl_redump_map  st01.std_dump_map  stg4bg.anm_dump_map  stg4bg.anm_redump_map
bytecode_test/: bytecode_test.cpp  bytecode_test2.cpp  bytecode_test3.cpp  bytecode_test4.cpp  bytecode_test5.cpp  bytecode_test6.cpp  bytecode_test7.cpp  bytecode_test8.cpp  bytecode_test9.cpp
dbghelp/: crc32.cpp  dbghelp.cpp  dbghelp.def  dbghelp_init_stub.cpp  dbghelp_stub.def  json5pp.hpp
discord_test/: discord_test.cpp
ghidra_launch/: ghidra_launch.cpp  ghidra_launch.rc
java/: mapfile.txt  test.cpp
libm/: libm_common.h  sin_cos.cpp  sincos_gcc.cpp  sincos_gcc.h  trandisp.cpp
loaddll/: force_load_pe.cpp  loaddll.cpp
parakit/: test.cpp
python_test/: test.cpp
screensavers/3DFO/: GENDROP.CXX  GENEXPLD.CXX  GENLEM.CXX  MESH.CXX  SS3DFO.CXX
screensavers/COMMON/: FASTDIB.C  MATERIAL.C  SCRNSAVE.CXX  SSA8.C  SSCOMMON.APS  SSCOMMON.H  SSDIB.C  SSIMAGE.C  SSINIT.CXX  TEXTURE.C
screensavers/GLAUX/: GLAUX.C  TK.C  TKDIB.C  TKIMAGE.C  VECT3D.C
symbol_dumps/: clang_builtin_x64.txt  libcmt_x64.txt  libcmt_x86.txt
twitch_irc_test/: twitch_irc.cpp  twitch_irc.hpp  twitch_irc_good.cpp  twitch_irc_old.cpp  twitch_irc_old2.cpp  twitch_irc_old3.cpp  twitch_irc_old4.cpp  twitch_irc_old5.cpp  twitch_irc_old6.cpp  twitch_irc_test.cpp  youtube_chat.cpp  youtube_test.cpp
vpatch/: common.h  vpatch_dll.cpp  vpatch_launcher.cpp
win_syscalls/: common.h  syscalls7.h
winhttp_dummy/: stop_breaking_websockets.cpp
winhttp_test3/: test.cpp
winhttp_websocket/: new_impl.cpp  websocket_impl.cpp  websocket_impl_backup.cpp  websocket_impl_backup2.cpp  websocket_impl_backup3_WORKS.cpp  websocket_impl_logging.cpp
wow64/: wow64.h  wow64_common.h  wow64_test.cpp  wow64cpu.h  wow64cpu_test.cpp  wow64win.h
x86_emulators/: 8086_cpu.cpp  8086_cpu.h  core_manager.cpp  z86_core.h  z86_core_internal_post.h  z86_core_internal_pre.h
xinput_dummy/: stop_complaining_about_xinput_1_4.cpp
zero/: BoundingBox.h  ExternalGlobal.h  FloatConstants.h  LinkerCheeseValues.h  atomic_intrin.h  bounding_box_simple.h  city_hash.cpp  compiler_support.h  custom_intrin.h  custom_intrin_OLD.h  d3d9x_sucks.h  expected.h  func_traits.h  func_traits_basic.h  json.h  libm_test.cpp  old_thcrap_strtouz.cpp  th_common.h  thcrap_util.h  trap_and_emulate.cpp  util.cpp  util.h  util_OLD.h  vec_lib.cpp  zero_std.h  zero_std_test.h  zun.h  zun_math.h  zun_types.h  zvariant.h
zero_include/: float.h  type_traits
znet/: aocf_server.cpp  client_test.cpp  common.h  p2p_test.cpp  server_test.cpp  unix_socket_test.cpp  znet.h  znet_backup.h  zpunch.cpp
zun/: funcs.h  new_engine.h  new_engine_types.h  new_engine_util.h  old_engine.h  old_engine_types.h  old_engine_util.h  types.h  util.h  zun.h
